# Holistic-Approach-for-Automated-Reverse-Engineering-of-Unified-Diagnostics-Service-Data

./: .gitmodules  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
revcan/: .gitignore  __init__.py  config.py
revcan/Notebooks/: Accelerator_Pedal.ipynb  Add_measurements.ipynb  Brake_pedal.ipynb  Charging.ipynb  Combine_Experiments.ipynb  Display_Ground_Truth_Timestemps.ipynb  Gear_selected.ipynb  Linear_Evaluation.ipynb  NN_Categorical_Signals.ipynb  NN_Continuous_Signals.ipynb  Ride_height.ipynb  Speed_Drive.ipynb  Steering_wheel.ipynb
revcan/Notebooks/Discovery/: Compare_discovery.ipynb
revcan/reverse_engineering/models/: best_estimator.txt  car_metadata.py  experiment.py
revcan/reverse_engineering/models/NNs/: SignalMatchingNN_CategoricalSignals.py  SignalMatchingNN_ContinuousSignals.py
revcan/scripts_for_doip_new/: 00_create_car.py  00_discover_arbitration_ids.py  01_discover_services.py  02_discover_servers.py  03_discover_dids.py  03_discover_dids_parallel.py  04_create_experiment.py  05_read_data.py  06_filter_experiment.py  06b_compare_experiments .py  _DOIP_Reverse_Engineering_Pipeline.ipynb  display_car_metadata.py  display_experiment_metadata.py  experiment_analysis_parallel.py
revcan/signal_discovery/: dids.py  discover.py  doip_dids.py  doip_discoverer.py  doip_scheduler.py  doip_scheduler_parallel_request.py  scheduler.py
revcan/signal_discovery/utils/: can_actions.py  common.py  constants.py  iso14229_1.py  iso15765_2.py  misc_methods.py  network_actions.py  time_handling.py
revcan/signal_discovery/utils/doipclient/: client.py  (+1 more)
(+12 files in other folders)
